--- a/RadialMenu/Themes/RadialMenu.xaml
+++ b/RadialMenu/Themes/RadialMenu.xaml
@@ -2,35 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
-    xmlns:Controls="clr-namespace:RadialMenu.Controls"
-    xmlns:Converters="clr-namespace:RadialMenu.Converters">
-
-    <Converters:ChildToIndex x:Key="ChildToIndex"/>
-
-    <Style x:Key="CentralMenuItem" TargetType="{x:Type Button}">
-        
-        <Setter Property="OverridesDefaultStyle" Value="True" />
-        <Setter Property="IsEnabled" Value="True" />
-        <Setter Property="BorderBrush" Value="#CCCCCC" />
-        <Setter Property="Panel.ZIndex" Value="0" />
-        
-        <Style.Triggers>
-            <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="BorderBrush" Value="#999999"/>
-            </Trigger>
-            
-            <Trigger Property="IsPressed" Value="True">
-                <Setter Property="Background" Value="#666666"/>
-                <Setter Property="BorderBrush" Value="#666666"/>
-                <Setter Property="Panel.ZIndex" Value="10" />
-            </Trigger>
-            
-            <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="BorderBrush" Value="#E3E3E3"/>
-            </Trigger>
-        </Style.Triggers>
-        
-    </Style>
+    xmlns:Controls="clr-namespace:RadialMenu.Controls">
 
     <Style TargetType="{x:Type Controls:RadialMenu}">
 
@@ -78,27 +50,10 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Controls:RadialMenu}">
-                    <ItemsControl ItemsSource="{TemplateBinding Content}">
-
-                        <ItemsControl.Template>
-                            <ControlTemplate>
-                                <Grid>
-                                    <ItemsPresenter/>
-                                    <Button Style="{StaticResource CentralMenuItem}" Command="{Binding CentralMenuCommand, RelativeSource={RelativeSource AncestorType=Controls:RadialMenu}}" Width="60" Height="60">
-                                        <Button.Template>
-                                            <ControlTemplate>
-                                                <Grid>
-                                                    <Ellipse Stroke="{TemplateBinding BorderBrush}" StrokeThickness="2" Fill="Transparent"></Ellipse>
-                                                    <ContentControl VerticalAlignment="Center" HorizontalAlignment="Center" Content="{Binding CentralMenuItem, RelativeSource={RelativeSource AncestorType=Controls:RadialMenu}}"/>
-                                                </Grid>
-                                            </ControlTemplate>
-                                        </Button.Template>
-                                    </Button>
-                                </Grid>
-                            </ControlTemplate>
-                        </ItemsControl.Template>
-
-                    </ItemsControl>
+                    <Grid>
+                        <ContentPresenter Content="{TemplateBinding CentralItem}"/>
+                        <ItemsControl ItemsSource="{TemplateBinding Content}"/>
+                    </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
