--- a/RadialMenu/Themes/RadialMenu.xaml
+++ b/RadialMenu/Themes/RadialMenu.xaml
@@ -1,13 +1,14 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:Controls="clr-namespace:RadialMenu.Controls">
 
     <Style TargetType="{x:Type Controls:RadialMenu}">
 
         <Style.Triggers>
             <Trigger Property="IsOpen" Value="True">
+                
+                <!-- RadialMenu openning animation -->
                 <Trigger.EnterActions>
                     <BeginStoryboard>
                         <Storyboard>
@@ -18,7 +19,8 @@
                         </Storyboard>
                     </BeginStoryboard>
                 </Trigger.EnterActions>
-                
+
+                <!-- RadialMenu closing animation -->
                 <Trigger.ExitActions>
                     <BeginStoryboard>
                         <Storyboard>
@@ -29,32 +31,39 @@
                         </Storyboard>
                     </BeginStoryboard>
                 </Trigger.ExitActions>
+                
             </Trigger>
         </Style.Triggers>
-        
+
+        <!-- Default RadialMenu style (while closed) -->
         <Setter Property="Opacity" Value="0"/>
-        
+        <Setter Property="Height" Value="300"/>
+        <Setter Property="Width" Value="300"/>
         <Setter Property="RenderTransform">
             <Setter.Value>
                 <TransformGroup>
-                    <ScaleTransform CenterX="155" CenterY="155" ScaleX="0.5" ScaleY="0.5"/>
-                    <RotateTransform CenterX="155" CenterY="155" Angle="45"/>
+                    <ScaleTransform CenterX="150" CenterY="150" ScaleX="0.5" ScaleY="0.5"/>
+                    <RotateTransform CenterX="150" CenterY="150" Angle="45"/>
                 </TransformGroup>
             </Setter.Value>
         </Setter>
 
-        <Setter Property="Height" Value="310"/>
-
-        <Setter Property="Width" Value="310"/>
-
+        <!-- RadialMenu template -->
         <Setter Property="Template">
             <Setter.Value>
+                
                 <ControlTemplate TargetType="{x:Type Controls:RadialMenu}">
                     <Grid>
-                        <ContentPresenter Content="{TemplateBinding CentralItem}"/>
+                        
+                        <!-- Content repitition (for items around) -->
                         <ItemsControl ItemsSource="{TemplateBinding Content}"/>
+                        
+                        <!-- Content (for central item) -->
+                        <ContentPresenter Content="{TemplateBinding CentralItem}"/>
+                        
                     </Grid>
                 </ControlTemplate>
+                
             </Setter.Value>
         </Setter>
         
