--- a/RadialMenu/Themes/RadialMenuCentralItem.xaml
+++ b/RadialMenu/Themes/RadialMenuCentralItem.xaml
@@ -6,22 +6,28 @@
     <Style TargetType="{x:Type Controls:RadialMenuCentralItem}">
 
         <Style.Triggers>
+
+            <!-- RadialMenuCentralItem style when overed -->
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="BorderBrush" Value="#999"/>
                 <Setter Property="Panel.ZIndex" Value="10"/>
             </Trigger>
 
+            <!-- RadialMenuCentralItem style when pressed -->
             <Trigger Property="IsPressed" Value="True">
                 <Setter Property="BorderBrush" Value="#666"/>
                 <Setter Property="Panel.ZIndex" Value="10"/>
             </Trigger>
 
+            <!-- RadialMenuCentralItem style when disabled -->
             <Trigger Property="IsEnabled" Value="False">
                 <Setter Property="BorderBrush" Value="#F3F3F3"/>
                 <Setter Property="Foreground" Value="#AFAFAF"/>
             </Trigger>
+            
         </Style.Triggers>
 
+        <!-- Default RadialMenuCentralItem style -->
         <Setter Property="Width" Value="60"/>
         <Setter Property="Height" Value="60"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
@@ -31,21 +37,29 @@
         <Setter Property="BorderBrush" Value="#CCC"/>
         <Setter Property="BorderThickness" Value="2"/>
         <Setter Property="Panel.ZIndex" Value="0" />
-        
+
+        <!-- RadialMenuCentralItem template -->
         <Setter Property="Template">
             <Setter.Value>
+                
                 <ControlTemplate TargetType="{x:Type Controls:RadialMenuCentralItem}">
                     <Grid>
+                        
+                        <!-- Rounded button -->
                         <Ellipse
                             Stroke="{TemplateBinding BorderBrush}"
                             StrokeThickness="{Binding BorderThickness.Top, RelativeSource={RelativeSource AncestorType=Controls:RadialMenuCentralItem}}"
                             Fill="{TemplateBinding Background}"/>
+                        
+                        <!-- Content -->
                         <ContentPresenter
                             Content="{TemplateBinding Content}"
                             HorizontalAlignment="{TemplateBinding HorizontalAlignment}"
                             VerticalAlignment="{TemplateBinding VerticalAlignment}"/>
+                        
                     </Grid>
                 </ControlTemplate>
+                
             </Setter.Value>
         </Setter>
         
